<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>eu.ueb</groupId>
    <artifactId>ACEM</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <description>Atelier de Création d'Enseignement Multimodal</description>
    <properties>
    	<!-- TODO 1 Pick the version of jetty you want. -->
        <jetty.version>9.1.0.v20131115</jetty.version>
        <esupcommons.version>0.3.4</esupcommons.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <repositories>
        <repository>
            <id>esup-snapshots</id>
            <url>https://mvn.esup-portail.org/content/repositories/snapshots</url>
            <snapshots>
            </snapshots>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>esup</id>
            <url>https://mvn.esup-portail.org/content/repositories/releases</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
            </releases>
        </repository>
        <!-- TODO 2 Configure repo2.maven.org as a repository. -->
		<repository>
			<id>repo2_maven_org</id>
			<url>http://repo2.maven.org/maven2</url>
		</repository>
    </repositories>
	<!-- TODO 3 Set up dependency to get the jetty-server artifact. -->
	<dependencies>
		<dependency>
			<groupId>org.eclipse.jetty</groupId>
			<artifactId>jetty-server</artifactId>
			<version>${jetty.version}</version>
		</dependency>
	</dependencies>
    <distributionManagement>
        <repository>
            <id>esup</id>
            <name>esup-portail</name>
            <url>https://mvn.esup-portail.org/content/repositories/releases</url>
        </repository>
        <snapshotRepository>
            <id>esup</id>
            <name>esup-portail</name>
            <url>https://mvn.esup-portail.org/content/repositories/snapshots</url>
        </snapshotRepository>
    </distributionManagement>
    <build>
        <defaultGoal>install</defaultGoal>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>2.7</version>
                <configuration>
                    <minmemory>128m</minmemory>
                    <maxmemory>512m</maxmemory>
                    <goal>javadoc:javadoc</goal>
                    <reportOutputDirectory>docs/javadoc</reportOutputDirectory>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-eclipse-plugin</artifactId>
                <version>2.8</version>
                <configuration>
                    <useProjectReferences>true</useProjectReferences>
                    <additionalConfig>
                        <file>
                            <name>.checkstyle</name>
                            <url>http://subversion.cru.fr/esup-commons/utils/checkstyle/checkstyle.xml</url>
                        </file>
                    </additionalConfig>
                    <additionalProjectFacets>
                        <jst.jstl>2.0</jst.jstl>
                    </additionalProjectFacets>
                    <additionalProjectnatures>
                        <projectnature>org.springframework.ide.eclipse.core.springnature</projectnature>
                    </additionalProjectnatures>
                    <additionalBuildcommands>
                        <buildcommand>org.springframework.ide.eclipse.core.springbuilder</buildcommand>
                    </additionalBuildcommands>
                    <downloadSources>true</downloadSources>
                    <downloadJavadocs>true</downloadJavadocs>
                    <wtpversion>2.0</wtpversion>
                </configuration>
            </plugin>
            <plugin>
            <!--
                <groupId>org.mortbay.jetty</groupId>
                <artifactId>maven-jetty-plugin</artifactId>
                <version>6.1.26</version>
            -->
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty.version}</version>
                <!-- 
                <configuration>
                	<jvmArgs>-Xmx512M -XX:MaxPermSize=512m</jvmArgs>
                    <contextPath>/</contextPath>
					<scanIntervalSeconds>3</scanIntervalSeconds>
					<scanTargetPatterns>
						<scanTargetPattern>
							<directory>src/main/webapp/WEB-INF</directory>
							<excludes>
								<exclude>**/*.jsp</exclude> <exclude>**/*.xhtml</exclude>
							</excludes>
							<includes>
								<include>**/*.properties</include>
								<include>**/*.xml</include>
							</includes>
						</scanTargetPattern>
					</scanTargetPatterns>
                </configuration>
                <executions>
                	<execution>
                		<phase>test</phase>
                		<goals>
                			<goal>run-exploded</goal>
                		</goals>
                	</execution>
                </executions>
                -->
            </plugin>
        </plugins>
    </build>
  <modules>
    <!-- <module>ACEM-batch</module> -->
    <module>ACEM-dal</module>
    <!-- <module>ACEM-utils</module> -->
    <module>ACEM-domain-beans</module>
    <module>ACEM-domain-services</module>
    <module>ACEM-web-jsf-servlet</module>
  </modules>
</project>